# tic-tac-toe

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  package.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: deploy.yml
public/: index.html
src/: App.css  App.js  App.tsx  index.tsx
src/components/: board.js  board.tsx  navbar.js  navbar.tsx  row.js  square.js  square.tsx
src/interfaces/: IAction.ts  IState.ts  difficulty.ts
src/reducers/: game.js  game.test.ts  game.ts
src/utils/: game.js  game.test.ts  game.ts  miniMax.test.ts  miniMax.ts
static/css/: main.17022b4e.css  main.17022b4e.css.map  main.5ef04285.css  main.5ef04285.css.map
static/js/: main.16fc3ff1.js  main.16fc3ff1.js.map  main.5ef6ccaa.js  main.5ef6ccaa.js.map  main.6fde179b.js  main.6fde179b.js.map  main.aab42939.js  main.aab42939.js.map
wasm-algorithm/: Cargo.toml
wasm-algorithm/src/: lib.rs
