[package]
name = "wasm-algorithm"
version = "0.1.0"
edition = "2021"
description = "simple rust wasm module for tic-tac-toe"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
